--- a/ios/weatherapp/Info.plist
+++ b/ios/weatherapp/Info.plist
@@ -2,8 +2,44 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key></key>
-	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string></string>
+	</array>
+	<key>Item0</key>
+	<string>Poppins-Bold.ttf</string>
+	<key>Item 1</key>
+	<string>Poppins-Medium.ttf</string>
+	<key>Item 2</key>
+	<string>Poppins-Regular.ttf</string>
+	<key>Item 3</key>
+	<string>Poppins-SemiBold.ttf</string>
+	<key>Item 4</key>
+	<string>AntDesign.ttf</string>
+	<key>Item 5</key>
+	<string>Entypo.ttf</string>
+	<key>Item 6</key>
+	<string>EvilIcons.ttf</string>
+	<key>Item 7</key>
+	<string>Feather.ttf</string>
+	<key>Item 8</key>
+	<string>FontAwesome.ttf</string>
+	<key>Item 9</key>
+	<string>Foundation.ttf</string>
+	<key>Item 10</key>
+	<string>Ionicons.ttf</string>
+	<key>Item 11</key>
+	<string>MaterialIcons.ttf</string>
+	<key>Item 12</key>
+	<string>MaterialCommunityIcons.ttf</string>
+	<key>Item 13</key>
+	<string>SimpleLineIcons.ttf</string>
+	<key>Item 14</key>
+	<string>Octicons.ttf</string>
+	<key>Item 15</key>
+	<string>Zocial.ttf</string>
+	<key>Item 16</key>
+	<string>Fontisto.ttf</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -51,7 +87,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
 </dict>
 </plist>
