--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,9 @@ target 'weatherapp' do
 
   # Flags change depending on the env values.
   flags = get_default_flags()
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways"
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
 
   use_react_native!(
     :path => config[:reactNativePath],
