--- a/ios/weatherapp/Info.plist
+++ b/ios/weatherapp/Info.plist
@@ -2,44 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string></string>
-	</array>
-	<key>Item0</key>
-	<string>Poppins-Bold.ttf</string>
-	<key>Item 1</key>
-	<string>Poppins-Medium.ttf</string>
-	<key>Item 2</key>
-	<string>Poppins-Regular.ttf</string>
-	<key>Item 3</key>
-	<string>Poppins-SemiBold.ttf</string>
-	<key>Item 4</key>
-	<string>AntDesign.ttf</string>
-	<key>Item 5</key>
-	<string>Entypo.ttf</string>
-	<key>Item 6</key>
-	<string>EvilIcons.ttf</string>
-	<key>Item 7</key>
-	<string>Feather.ttf</string>
-	<key>Item 8</key>
-	<string>FontAwesome.ttf</string>
-	<key>Item 9</key>
-	<string>Foundation.ttf</string>
-	<key>Item 10</key>
-	<string>Ionicons.ttf</string>
-	<key>Item 11</key>
-	<string>MaterialIcons.ttf</string>
-	<key>Item 12</key>
-	<string>MaterialCommunityIcons.ttf</string>
-	<key>Item 13</key>
-	<string>SimpleLineIcons.ttf</string>
-	<key>Item 14</key>
-	<string>Octicons.ttf</string>
-	<key>Item 15</key>
-	<string>Zocial.ttf</string>
-	<key>Item 16</key>
-	<string>Fontisto.ttf</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -73,8 +35,35 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>For Location Purpose</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>For Location Purpose</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>For Location Purpose</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>Fontisto.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
